fix switch covers anim, fix menu info, fix last song end

--- a/src/css/aparato.css
+++ b/src/css/aparato.css
@@ -17,7 +17,8 @@
 .menu-screen-info{
     width: 100%;
     /* height: 100%; */
-    height: fit-content;
+    /* height: fit-content; */
+    height: 96rem;
     background-color: white;
     scale: 0.90;
 
